force-app/main/default/objects/Products__c/Products__c.object-meta.xml
<CustomObject>
    <label>Product</label>
    <nameField>
        <label>Product / Machine Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>