force-app/main/default/objects/Products__c/fields/Power_in_HP__c.field-meta.xml
<CustomField>
    <fullName>Power_in_HP__c</fullName>
    <label>Power in HP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>