force-app/main/default/objects/Products__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>