force-app/main/default/objects/Products__c/fields/Quantity_In_no_s__c.field-meta.xml
<CustomField>
    <fullName>Quantity_In_no_s__c</fullName>
    <label>Quantity (In no&apos;s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>