force-app/main/default/objects/Products__c/fields/Quoted_Price__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Price__c</fullName>
    <formula>Unit_Price__c  *  Quantity_In_no_s__c</formula>
    <label>Quoted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>