force-app/main/default/objects/Products__c/fields/QuoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>Quote_Line_Item__c</referenceTo>
    <relationshipName>Product</relationshipName>
    <type>Lookup</type>
</CustomField>